bk_ida/gccida/c1/peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3403:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3432:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v5].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3435:32: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &v32, peep2_insn_data_0[v5].live_before); 
                               ^~~~~~~~~~~~~~~~~
                               peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3440:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v5].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3443:32: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &v33, peep2_insn_data_0[v5].live_before); 
                               ^~~~~~~~~~~~~~~~~
                               peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3512:7: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
v15 = peep2_find_free_register_search_ofs + i - 53; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3513:6: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
if ( peep2_find_free_register_search_ofs + i <= 52 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3514:7: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
v15 = peep2_find_free_register_search_ofs + i; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3530:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3558:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3590:1: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'
peep2_find_free_register_search_ofs = v28; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/recog.c:3606:1: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'
peep2_find_free_register_search_ofs = 0; 
^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peep2_find_free_register/src/obj/recog.o] Error 1
